[gd_scene load_steps=3 format=3 uid="uid://bwy68w28i3dlx"]

[ext_resource type="Script" path="res://scenes/start.gd" id="1_45hx8"]

[sub_resource type="LabelSettings" id="LabelSettings_a2n4h"]
font_size = 34
outline_size = 5
outline_color = Color(0.716937, 0.508182, 0.370737, 1)
shadow_size = 0

[node name="Start" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_45hx8")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="GridSmashLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "GridSmash"
label_settings = SubResource("LabelSettings_a2n4h")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="SinglePlayerContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/SinglePlayerContainer"]
layout_mode = 2
text = "Single Player"

[node name="MapControl" type="OptionButton" parent="CenterContainer/VBoxContainer/HBoxContainer/SinglePlayerContainer"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Basic Map"
popup/item_1/text = "Spiral Map"
popup/item_1/id = 1

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/SinglePlayerContainer"]
layout_mode = 2
text = "Play now"

[node name="MultiPlayerContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/MultiPlayerContainer"]
layout_mode = 2
text = "Multi Player"

[node name="MapControl" type="OptionButton" parent="CenterContainer/VBoxContainer/HBoxContainer/MultiPlayerContainer"]
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "Basic Map"

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/MultiPlayerContainer"]
layout_mode = 2
text = "Host Game"

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/MultiPlayerContainer"]
layout_mode = 2
text = "Join Game"

[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/SinglePlayerContainer/Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/MultiPlayerContainer/Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/MultiPlayerContainer/Button2" to="." method="_on_start_button_pressed"]
